--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 div {
     background: linear-gradient(191.34deg,#17181a -4.95%, #17181a 103.74%);
+    background-repeat: no-repeat;
     width: 375px;
     height: 568px;
     border-radius: 35px;
