--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 div {
     background-color: #17181a;
+    background-repeat: no-repeat;
     width: 375px;
     height: 568px;
     border-radius: 35px;
@@ -72,7 +73,4 @@ button:hover {
 
 .zero {
     grid-column: 1/3;
-}
-div#b0g199b28d {
-    display: none;
 }
